<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/punchBlauw"
>

	<LinearLayout 
	    android:id="@+id/head"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/punchLogo"
	        android:layout_width="match_parent"
	        android:layout_height="70dp"
	        android:layout_weight="0"
	        android:src="@drawable/punchlogo" />
	    
	    <TextView style="@style/headingStyle"
	        android:id="@+id/teamTitle"
	        android:textColor="@color/gray" />
	    
	    <View style="@style/lineStyle" />
	    
	    <LinearLayout 
		    android:id="@+id/result"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:orientation="vertical" >
		    
	        <ProgressBar
	            android:id="@+id/progressBarteamGeneral"
	            style="?android:attr/progressBarStyleLarge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:layout_marginBottom="10dp"
	            android:layout_gravity="center" />
		    
		</LinearLayout>
		
	    <View style="@style/lineStyle" />
	    
	    <TextView style="@style/headingStyleMedium"
	        android:id="@+id/playersTitle"
	        android:text="@string/players"
	        android:textColor="@color/gray" />
	    
	    <LinearLayout 
		    android:id="@+id/players"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:orientation="vertical" >
	        
	    </LinearLayout>
	    
	    <View style="@style/lineStyle" />
	    
	    <TextView style="@style/headingStyleMedium"
	        android:id="@+id/trainersTitle"
	        android:text="@string/trainers"
	        android:textColor="@color/gray" />
	    
	    <LinearLayout 
		    android:id="@+id/trainers"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:orientation="vertical" >
	        
	    </LinearLayout>
	    
	    <View style="@style/lineStyle" />
	    
	    <TextView style="@style/headingStyleMedium"
	        android:id="@+id/coachesTitle"
	        android:text="@string/coaches"
	        android:textColor="@color/gray" />
	    
	    <LinearLayout 
		    android:id="@+id/coaches"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:orientation="vertical" >
	        
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>